Une case ne peut être cliquée qu'une fois
Co-Authored-By: Shadow <181655894+Shadow4451@users.noreply.github.com>

--- a/morpion.css
+++ b/morpion.css
@@ -17,6 +17,7 @@ table.morpion {
     table-layout: fixed;
     border-collapse: separate;
     border-spacing: 10px;
+    background-color: white;
 }
 div.case{
     border: 5px solid black;
